--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<!-- ICS20-PWA-Template -->
+<!-- ASSIGNMENT-05-HTML -->
   <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="ICS20-PWA-Template" />
+    <meta name="description" content="ASSIGNMENT-05-HTML" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Curtis Edwards" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Template</title>
-    <link rel="canonical" href="https://Curtis-Edwards.github.io/ICS20-PWA-Template/" />
-    <link rel="manifest" href="/ICS20-PWA-Template/site.webmanifest" />
+    <title>Number of iterations</title>
+    <link rel="canonical" href="https://Curtis-Edwards.github.io/ASSIGNMENT-05-HTML/" />
+    <link rel="manifest" href="/ASSIGNMENT-05-HTML/site.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
     <!-- None blocking for Lighthouse report -->
     <!-- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously -->
@@ -23,6 +23,23 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
-
+    <h1><b>Number of iterations </b></h1>
+    <br>
+    <h4><b>Enter your integer below:</b></h4>
+    <br>
+    <!-- Numeric Textfield with Floating Label -->
+    <form action="#">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="number" id="integer">
+        <label class="mdl-textfield__label" for="integer">Number...</label>
+        <span class="mdl-textfield__error">This input is not allowed.</span>
+      </div>
+    </form>
+    <br>
+    <!-- Accent-colored raised button with ripple -->
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClick()">
+      Calculate
+    </button>
+    <div id="output"></div>
   </body>
 </html>
