fixed spelling error

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </form>
     <br>
     <!-- Accent-colored raised button with ripple -->
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClick()">
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
       Calculate
     </button>
     <div id="output"></div>
