--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Curtis Edwards" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>number of iterations</title>
+    <title>Number of iterations</title>
     <link rel="canonical" href="https://Curtis-Edwards.github.io/ASSIGNMENT-05-HTML/" />
     <link rel="manifest" href="/ASSIGNMENT-05-HTML/site.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
